--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <header>
         <!-- Navbar Start  -->
         <section>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar top-fixed navbar-expand-lg bg-light">
                 <div class="container">
 
                     <a class="navbar-brand" href="#"> <img src="images/techeducare-logo.png" alt="" class="img-fluid"
                             width="48" height="24"> <span class="fs-2 fw-bold text-warning pt-4">TECH</span> <span
-                            class="text-muted">Edu-Care</span></a>
+                            class="text-primary">Edu-Care</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -46,20 +46,20 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Courses</a>
+                                <a class="nav-link" href="#courses">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Deals</a>
+                                <a class="nav-link" href="#deals">Deals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Success</a>
+                                <a class="nav-link" href="#success">Success</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#fqa"> About</a>
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn btn-warning text-light " data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">
+                                <button type="button" class="btn bg-primary text-light animation-register "
+                                    data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     Register
                                 </button>
                             </li>
@@ -97,7 +97,7 @@
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
                                 <p class="py-3">Educational technology is the combined use of computer hardware,
                                     s<br> oftware, and educational theory and practice to facilitate learning.</p>
-                                <a href="#" class="btn btn-warning text-light text-light"> Get Started</a>
+                                <a href="#" class="btn bg-primary text-light text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                 <p class="py-3">Educational technology is the combined use of computer hardware,
                                     <br> software, and educational theory and practice to facilitate learning.
                                 </p>
-                                <a href="#" class="btn btn-warning text-light"> Get Started</a>
+                                <a href="#" class="btn bg-primary text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                                 <p class="py-3">Educational technology is the combined use of computer hardware,
                                     <br> software, and educational theory and practice to facilitate learning.
                                 </p>
-                                <a href="#" class="btn btn-warning text-light"> Get Started</a>
+                                <a href="#" class="btn bg-primary text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -147,10 +147,15 @@
     </header>
 
     <!-- Header End -->
+
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+
     <!-- Main Start  -->
     <main>
         <!-- Discover Courses Start-->
-        <section class="container mt-5 mb-3">
+        <section class="container mt-5 mb-3" id="courses">
             <div class="text-center">
                 <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable
@@ -254,15 +259,17 @@
                 </div>
             </div>
             <div class="text-center my-5">
-                <a href="#" class="btn btn-warning text-light ">See More Courses</a>
+                <a href="#" class="btn bg-primary text-light ">See More Courses</a>
             </div>
 
         </section>
         <!-- Discover Courses End-->
-
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
         <!-- Explore E-learning Start   -->
 
-        <section class="container mt-5">
+        <section class="container mt-5" id="deals">
             <div class="card mb-3" style="max-width: 100%;">
                 <div class="row g-0">
                     <div class="col-md-5">
@@ -297,7 +304,7 @@
                                 </div>
                             </div>
 
-                            <a href="#" class="btn btn-warning text-light">Read More</a>
+                            <a href="#" class="btn bg-primary text-light">Read More</a>
 
                         </div>
                     </div>
@@ -307,7 +314,9 @@
         </section>
 
         <!-- Explore E-learning End   -->
-
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
         <!-- Registration Section Start  -->
         <section class="container bg-primary rounded-3 my-5 p-5 " style="height: 250px;">
             <div class="d-md-flex justify-content-evenly align-items-center  ">
@@ -380,10 +389,12 @@
             <!-- Modal End -->
         </section>
         <!-- Registration Section ENd  -->
-
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
         <!-- Successful Students Section Start  -->
 
-        <section class="container mt-5 mb-5">
+        <section class="container mt-5 mb-5" id="success">
             <div class="mb-5">
                 <h3 class="fs-1 font-bold">Meet Our Successful <br>
                     Students</h3>
@@ -425,10 +436,13 @@
 
             </div>
             <div class="text-center my-5">
-                <a href="#" class="btn btn-warning text-light ">View All</a>
+                <a href="#" class="btn bg-primary text-light ">View All</a>
             </div>
         </section>
         <!-- Successful Students Section End  -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
         <!-- Students Feedback Section Start  -->
 
         <section class="container mt-5 mb-5">
@@ -500,12 +514,99 @@
                 </div>
             </div>
             <div class="text-center my-5">
-                <a href="#" class="btn btn-warning text-light ">View All</a>
+                <a href="#" class="btn bg-primary text-light ">View All</a>
             </div>
         </section>
         <!-- Students Feedback Section End  -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- Question and Answer Section Start  -->
+        <section class="container mt-5 mb-5" id="fqa">
+            <div class="mb-5 text-center">
+                <h3 class="fs-1 font-bold"> Frequently Asked Questions </h3>
+                <p>Read some feedback from our Successful students who now working in some reputed Companies. </p>
+            </div>
+
+            <div class="accordion accordion-flush  w-75  ms-auto me-auto  " id="accordionFlushExample">
+                <div class="accordion-item  border mb-3">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            <b>What is the difference between flexbox and grid?</b>
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">The basic difference between <b>CSS Grid</b> Layout and <b>CSS
+                                Flexbox</b> Layout is that <b>flexbox</b> was designed for layout in one dimension -
+                            either a row or a column. <b>Grid</b> was designed for two-dimensional layout - rows, and
+                            columns at the same time.</div>
+                    </div>
+                </div>
+                <div class="accordion-item  border mb-3">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" >
+                            <b>What is the difference between Bootstrap and Tailwind?</b>
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body"> <b>Bootstrap</b> comes with a set of pre-styled responsive,
+                            mobile-first components that possess a definite UI kit. <b>Tailwind</b> CSS uses a set of
+                            utility classes to create a neat UI with more flexibility and uniqueness..</div>
+                    </div>
+                </div>
+                <div class="accordion-item  border mb-3">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            <b> What is CSS Model Box?</b>
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body"> <b>The CSS box model</b> is a container that contains multiple
+                            properties including borders, margin, padding, and the content itself. It is used to create
+                            the design and layout of web pages. It can be used as a toolkit for customizing the layout
+                            of different elements. The web browser renders every element as a rectangular box according
+                            to the CSS box model. Box-Model has multiple properties in CSS. <br>
+                            <div> The following figure illustrates the Box model in CSS: <br><img
+                                    src="images/css-box model.png" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item  border mb-3">
+                    <h2 class="accordion-header" id="flush-headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFour" aria-expanded="false"
+                            aria-controls="flush-collapseFour">
+                            <b>What is Semantic Tag? write with example.</b>
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body"> <b>The HTML semantics</b> refers to the tags that provide meaning
+                            to an HTML page rather than just presentation. It makes HTML more comprehensible by better
+                            defining the different sections and layout of web pages. <br> <b>Semantic HTML</b> elements
+                            are those that clearly describe their meaning in a human- and machine-readable way. Elements
+                            such as <b>header</b>, <b>main</b> , <b>article</b> and <b>article</b> are all considered semantic because they
+                                            accurately describe the purpose of the element and the type of content that
+                                            is inside them.</div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- Question and Answer Section End  -->
     </main>
     <!-- Main End -->
+
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 
     <!-- Bootstrap JS Link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
