--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                 <div class="accordion-item  border mb-3">
                     <h2 class="accordion-header" id="flush-headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" >
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             <b>What is the difference between Bootstrap and Tailwind?</b>
                         </button>
                     </h2>
@@ -592,9 +592,10 @@
                             to an HTML page rather than just presentation. It makes HTML more comprehensible by better
                             defining the different sections and layout of web pages. <br> <b>Semantic HTML</b> elements
                             are those that clearly describe their meaning in a human- and machine-readable way. Elements
-                            such as <b>header</b>, <b>main</b> , <b>article</b> and <b>article</b> are all considered semantic because they
-                                            accurately describe the purpose of the element and the type of content that
-                                            is inside them.</div>
+                            such as <b>header</b>, <b>main</b> , <b>article</b> and <b>article</b> are all considered
+                            semantic because they
+                            accurately describe the purpose of the element and the type of content that
+                            is inside them.</div>
                     </div>
                 </div>
             </div>
@@ -623,13 +624,46 @@
         </section>
         <!-- Trusted Companies Section End -->
     </main>
-    <!-- Main End -->               
+    <!-- Main End -->
 
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+
+    <!-- Footer Section Start  -->
+    <footer
+        class="container-fluid text-light  mt-5 bg-dark d-flex align-items-center justify-content-center flex-column"
+        style="height: 60vh;">
+
+        <div class="text-center ">
+            <a class="navbar-brand" href="#"> <img src="images/techeducare-logo.png" alt="" class="img-fluid" width="48"
+                    height="24"> <span class="fs-2 fw-bold text-warning pt-4">TECH</span> <span
+                    class="text-primary">Edu-Care</span></a>
+        </div>
+
+        <div class="mb-5 pb-5 text-center">
+            <small>Holding 31, 10B-Sector 11, Utttara-North</small> <br>
+            <small>Dhaka-Bangladesh</small> <br>
+            <small>Privacy Policy  |  Terms of use</small>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                    class="fa-brands fa-instagram s-icons"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square s-icons"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube s-icons"></i></a>
+            <a href="https://twitter.com/monirzkhan526" target="_blank"><i class="fa-brands fa-twitter s-icons"></i></a>
+        </div>
+        <div>
+            <small>©2023. TECH Edu-care. All rights reserved. Dhaka-Bangladesh.</small>
+        </div>
+    </footer>
+    <!-- Footer Section End  -->
     <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
     <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
     <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 
     <!-- Bootstrap JS Link  -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
